kubernetes/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  namespace: chat-app
  labels:
    app: chat-app
spec:
  selector:
    matchLabels:
      app: chat-app
  replicas: 1
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: farooqabdulla279/chat-app-frontend:v9.2
        ports:
        - containerPort: 3000
      restartPolicy: Always
