kubernetes/frontend/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app
  labels:
    app: chat-app
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - realtimechat.101xdev.com
    secretName: letsencrypt-realtimechat
  - hosts:
    - berealtime.101xdev.com
    secretName: letsencrypt-berealtime
  ingressClassName: nginx
  rules:
  - host: "realtimechat.101xdev.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-app-svc-ci
            port:
              number: 3000
  - host: "berealtime.101xdev.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-app-be-svc-ci
            port:
              number: 3001
